# cpf

./: .dockerignore  .envexample  .gitignore  LICENSE  README.md  compose.yml  docker-compose.yml  drop.sql  package-lock.json  schema.sql  seed.sql
backend/: Dockerfile  entrypoint.sh  (+1 more)
backend/src/: pyproject.toml
backend/src/cpf/: gunicorn.conf.py  main.py
backend/src/cpf/adapters/inbound/data_loader/: loader.py
backend/src/cpf/adapters/inbound/data_loader/data/buckets/: frameworks.json  programming_language.json  ui_ux_development.json
backend/src/cpf/adapters/inbound/data_loader/data/ladders/: backend.json  frontend.json
backend/src/cpf/adapters/inbound/rest_api/: ion.py  permissions.py  rest_api.py  utils.py
backend/src/cpf/adapters/inbound/rest_api/users/: api.py
backend/src/cpf/adapters/outbound/fusionauth/: client.py
backend/src/cpf/adapters/outbound/mocks/: client.py
backend/src/cpf/adapters/outbound/postgres/: daos.py  repositories.py
backend/src/cpf/core/domain/: enums.py  services.py  utils.py
backend/src/cpf/core/domain/aggregates/: aggregate_root.py  domain_event.py
backend/src/cpf/core/domain/aggregates/buckets/: aggregate.py  events.py
backend/src/cpf/core/domain/aggregates/ladders/: aggregate.py  events.py
backend/src/cpf/core/domain/aggregates/users/: aggregate.py  events.py
backend/src/cpf/core/ports/provided/: services.py
backend/src/cpf/core/ports/required/: clients.py  daos.py  dtos.py  readmodels.py  writemodels.py
backend/src/tests/: factories.py  mocks.py
backend/src/tests/core/domain/aggregates/: test_users.py
(+442 files in other folders)
